[tool.poetry]
name = "yfs"
version = "0.3.0"
description = "Scrape Yahoo Finance"
authors = ["dgnsrekt <dgnsrekt@pm.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://dgnsrekt.github.io/yfs/"
repository = "https://github.com/dgnsrekt/yfs"
keywords = ["yahoo", "finance", "scraper", "yfs"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.2"
pydantic = "^1.6.1"
requests-html = "^0.10.0"
pendulum = "^2.1.2"
more_itertools = "^8.5.0"
pandas = "^1.1.2"
prompt-toolkit = "^3.0.7"
enlighten = "^1.6.2"
requests = {extras = ["socks"], version = "^2.24.0"}
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-sugar = "^0.9.4"
nox = "^2020.8.22"
pytest-regressions = "^2.0.1"
toml = "^0.10.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
